--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
 :root {
-  --color-primary: #4D41C0;
+    --color-primary: #4D41C0;
 }
 
 * {
@@ -9,11 +8,13 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-html, body {
+html,
+body {
     background-color: #E5E5E5;
 }
 
-a, a:hover {
-  text-decoration: none;
-  color: unset;
+a,
+a:hover {
+    text-decoration: none;
+    color: unset;
 }
